--- a/KonkursyMuzyczne/Properties/Resources.resx
+++ b/KonkursyMuzyczne/Properties/Resources.resx
@@ -118,7 +118,52 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="konkursy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\konkursy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="konkursy2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\konkursy2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uczestnicy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uczestnicy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="piano-1655558_1920" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\piano-1655558_1920.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="silhouette-3316257_1280" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\silhouette-3316257_1280.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edycje" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edycje.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="no-person-3221109_1920" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\no-person-3221109_1920.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uczestnicyedycji" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uczestnicyedycji.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vintage-1113175_1280" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vintage-1113175_1280.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uczestnik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uczestnik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uczestnicy1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uczestnicy1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="piano-1655558_19201" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\piano-1655558_19201.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edycje1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edycje1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="konkursy1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\konkursy1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sheet-music-1229481_1920" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sheet-music-1229481_1920.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uczestnicyedycji1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uczestnicyedycji1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
